Add setup terminal, with stubs for commands

--- a/Chore-Manager/Chore-Manager.vcxproj
+++ b/Chore-Manager/Chore-Manager.vcxproj
@@ -62,6 +62,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="setupCommands.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Sprint.cpp" />
   </ItemGroup>
