--- a/Chore-Manager/Chore-Manager.vcxproj
+++ b/Chore-Manager/Chore-Manager.vcxproj
@@ -65,6 +65,7 @@
     <ClCompile Include="setupCommands.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Sprint.cpp" />
+    <ClCompile Include="transitionCommands.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Chore.h" />
